apps/overlays/zion/jellyfin/ingress.yaml
---
# auth-traefik-outpost - defined in radarr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-jellyfin
          port: 8096
          sticky:
            cookie:
              name: jellyfin-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-jellyfin-mw
        # - name: zion-jellyfin-auth-middleware
        # - name: zion-jellyfin-cors-middleware
    # - match: Host(`jellyfin.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
    #   kind: Rule
    #   priority: 15
    #   services:
    #     - name: zion-auth-traefik-outpost
    #       port: 9000

  tls:
    secretName: jellyfin-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-insecure
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: noop
          kind: TraefikService
      middlewares:
        - name: zion-jellyfin-insecure-mw
